# duckdb-gorz

./: CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
examples/: gorz_community_extension.ipynb
lib/gorz/include/gorz/: Base128.h  BlockPacker.h  Gord.h  GordReader.h  GoriIndex.h  Inflate.h  Io.h  MetaFile.h  Reader.h  Writer.h
lib/gorz/src/: Base128.cpp  BlockPacker.cpp  Gord.cpp  GordReader.cpp  GoriIndex.cpp  Inflate.cpp  MetaFile.cpp  Reader.cpp  Writer.cpp
src/: gorz_extension.cpp
src/include/: gorz_extension.hpp
test/sql/: gord.test  gorz.test
